# coop-kobe-parser

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
demo/: demo.csv
src/coop_kobe_parser/: __init__.py  __main__.py  logger.py
src/coop_kobe_parser/parsers/: __init__.py  product.py  summary.py
tests/: test_init.py
