[project]
name = "coop-kobe-parser"
version = "0.1.0"
description = "コープこうべの宅配の注文書(CSV)をパースするPythonパッケージ"
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
keywords = ["coop","csv","parser","japanese","japan"]

[project.urls]
Homepage = "https://github.com/ryohidaka/coop-kobe-parser"
Repository = "https://github.com/ryohidaka/coop-kobe-parser"
Issues = "https://github.com/ryohidaka/coop-kobe-parser/issues"
Changelog = "https://github.com/ryohidaka/blob/main/coop-kobe-parser/CHANGELOG.md"

[project.scripts]
"coop-kobe-parser" = "coop_kobe_parser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coop_kobe_parser"]
